# Optical-Flow

./: .gitignore  BGS.cpp  BGS.h  CMakeLists.txt  ConsoleApplication1.7z  Vehicle.cpp  Vehicle.h  mMinWindow.cpp  mMinWindow.h  main.cpp  somefile.txt  stdafx.h
ConsoleApplication1/: ConsoleApplication1.sln  OpticalFlow.sln
ConsoleApplication1/ConsoleApplication1/: BGS.cpp  BGS.h  BGSProduct.cpp  BGSProduct.h  Config.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  HaarCascade.cpp  HaarCascade.h  Vehicle.cpp  Vehicle.h  banan.avi  bridge.avi  mMinWindow.cpp  mMinWindow.h  main.cpp  stdafx.h  ~AutoRecover.ConsoleApplication1.vcxproj
ConsoleApplication1/ConsoleApplication1/package_bgs/: AdaptiveBackgroundLearning.cpp  AdaptiveBackgroundLearning.h  AdaptiveSelectiveBackgroundLearning.cpp  FrameDifferenceBGS.cpp  GMG.cpp  MixtureOfGaussianV1BGS.cpp  MixtureOfGaussianV1BGS.h  MixtureOfGaussianV2BGS.cpp  StaticFrameDifferenceBGS.cpp  WeightedMovingMeanBGS.cpp  WeightedMovingMeanBGS.h  WeightedMovingVarianceBGS.cpp
ConsoleApplication1/ConsoleApplication1/package_bgs/jmo/: BlobExtraction.cpp  CMultiLayerBGS.cpp  CMultiLayerBGS.h  MultiLayerBGS.cpp  OpenCvDataConversion.h  blobresult.h
